# crystal

./: .gitignore  404.html  LICENSE.md  README.md  api.html  configuration.html  extras.html  index.html  mkdocs.yml  pyproject.toml  setup.py  showcase.html  sitemap.xml  styling.html  troubleshooting.html
.github/workflows/: ci.yml  deploy-docs.yml
.tools/: build_docs.sh  ci.sh  copier-answers.yml  release.sh
docs/: README.md  api.md  configuration.md  extras.md  requirements.in  requirements.txt  showcase.md  styles.md  styling.md  troubleshooting.md
docs/assets/: style.css
docs/css/: mkdocstrings.css
docs/quickstart/: README.md  ci.md  index.md  migrate.md  python-dependencies.md
examples/migrated/: mkdocs.yml
examples/migrated/docs/: SUMMARY.md  gen_doc_stubs.py  gen_doc_stubs_nav.py  index.md  requirements.txt
examples/migrated/src/: foo.cr
examples/modern/: mkdocs.yml
examples/modern/docs/: requirements.txt
examples/modern/docs/css/: mkdocstrings.css
examples/simple/: mkdocs.yml
examples/simple/.github/workflows/: deploy-docs.yml
examples/simple/docs/: api.md  index.md  requirements.in  requirements.txt
mkdocstrings/handlers/: crystal.py
mkdocstrings/handlers/crystal/: __init__.py  collector.py  crystal_html.py  deduplicate_toc.py  escape_html_extension.py  inventory.py  items.py  macros.py  renderer.py  xref_extension.py
mkdocstrings/templates/crystal/material/: class_method.html  constant.html  instance_method.html  macro.html  method.html  style.css  type.html
mkdocstrings_handlers/crystal/: __init__.py  collector.py  crystal_html.py  deduplicate_toc.py  inventory.py  items.py  macros.py  renderer.py
mkdocstrings_handlers/crystal/templates/material/: constant.html  method.html  type.html
quickstart/: ci.html  index.html  migrate.html  python-dependencies.html
requirements/: requirements-docs.txt
tests/: test_crystal_html.py  test_deduplicate_toc.py  test_renderer.py
tests/crystal_html/: arg_only.yml  basic.yml  basic_2.yml
tests/deduplicate_toc/: basic.yml
