[tool.poetry]
name = "mkdocstrings-crystal"
version = "0.1.0"
description = "Crystal language doc generator for mkdocstrings"
authors = ["Oleh Prypin <oleh@pryp.in>"]
packages = [
    { include = "mkdocstrings" }
]

[tool.poetry.dependencies]
python = "^3.6"
mkdocstrings = ">0.13.6"
mkdocs-material = "^6.0.2"
markupsafe = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytype = {version = "^2020.10.8", python = "^3.6,<3.9"}
isort = "^5.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
