[tool.poetry]
name = "mkdocstrings-crystal"
version = "0.2.1"
description = "Crystal language doc generator for mkdocstrings"
authors = ["Oleh Prypin <oleh@pryp.in>"]
license = "MIT"
repository = "https://github.com/oprypin/mkdocstrings-crystal"
keywords = ["mkdocs", "mkdocstrings", "crystal", "mkdocs-plugin"]
readme = "README.md"
packages = [
    { include = "mkdocstrings" }
]

[tool.poetry.plugins."markdown.extensions"]
deduplicate-toc = "mkdocstrings.handlers.crystal.deduplicate_toc:DeduplicateTocExtension"

[tool.poetry.dependencies]
python = "^3.7"
mkdocstrings = ">=0.14.0b1"
mkdocs-material = "^6.0.2"
markupsafe = "^1.1.1"
cached-property = "^1.5.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-golden = "^0.2.0"
black = "^20.8b1"
isort = "^5.6.4"
autoflake = "^1.4"
pytype = {version = "^2020.10.8", markers = "python_version>='3.6' and python_version<'3.9' and sys_platform!='win32'"}  # Skip on Windows

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:mkdocstrings.handlers.crystal.*:"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
